--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -134,3 +134,24 @@
     year = {2017},
     doi = {10.1137/15M1020575},
 }
+
+@article{ocpb:16,
+    author       = {Brendan O'Donoghue and Eric Chu and Neal Parikh and Stephen Boyd},
+    title        = {Conic Optimization via Operator Splitting and Homogeneous Self-Dual Embedding},
+    journal      = {Journal of Optimization Theory and Applications},
+    month        = {June},
+    year         = {2016},
+    volume       = {169},
+    number       = {3},
+    pages        = {1042-1068},
+    url          = {http://stanford.edu/~boyd/papers/scs.html},
+}
+
+@Article{Garstka_2021,
+    author  = {Michael Garstka and Mark Cannon and Paul Goulart},
+    journal = {Journal of Optimization Theory and Applications},
+    title   = {{COSMO}: A Conic Operator Splitting Method for Convex Conic Problems},
+    year    = {2021},
+    doi     = {10.1007/s10957-021-01896-x},
+    url     = {https://doi.org/10.1007/s10957-021-01896-x},
+}
