Removed JuMP solution

--- a/report/report.tex
+++ b/report/report.tex
@@ -69,7 +69,7 @@
 
 \newcolumntype{L}{>{$}l<{$}} % math-mode version of "l" column type
 
-\title{Project Non-ML 5}
+\title{Project Non-ML 5\\Final Project for the CM course 2020/21}
 \author{Matteo De Francesco}
 \date{}
 \begin{document}
